client/styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');

//GENERAL 
html, 
body {
  font-family: 'Montserrat', sans-serif;
  padding-top: 40px;
  padding-bottom: 40px;
  background-color: #FCF8E8;
  background-image: url('/bestbg.jpg');
  background-size: cover;
  background-repeat: no-repeat;
}

h1 {
  font-weight: bold;
  margin-bottom: 20px;
  text-align: center;
}

a {
  color: black;
}

a:hover {
  font-weight: bold;
}

// TOP NAVBAR

.navbar {
  display: flex;
  align-items: center;
  background-color: #4E944F;
  position: fixed;
  top: 0;
  width: 100%;
  justify-content: space-between;

  a {
    margin-left: 20px;
    color: white
  }

  .login-button {
    margin-right: 20px;
    display: flex;
    text-align: center;
  }
  .login-button h2{
    color: #fff;
    font-size: 20px;
    text-align: center;

  }
}

// CHALLENGES

.challenges-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  justify-items: center;
  justify-content: space-evenly;

}

// CARDS

.challenge-card, .my-challenge-card, .tip-card{
  width: 250px;
  height: 350px;
  padding: 10px;
  border: 2px solid #CC704B;
  border-radius: 25px;
  margin: 5px;
  display: flex;  
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  align-content: space-around;
  background-color: #F7EDDB;
  box-shadow: 5px 10px 18px #888888;

  .title {
    font-size: 14px;
  }

  img {
    mix-blend-mode: multiply;
    width: 65%;
  }

  .complete-or-delete {
    display: flex;
    column-gap: 10px;
  }
}

// BOTTOM BAR

.points-section {
  display: flex;
  background-color: #4E944F;
  justify-content: flex-start;
  align-items: center;
  position: fixed;
  bottom: 0;
  width: 100%;
  color: white;
  flex-wrap: wrap;

  h3 {
    margin-left: 20px;
    font-weight: bold;
  }

  img {
    width: 10%;
    margin-top: 8px;
    margin-left: 20px;
  }
}

// POPUPS

.overlay {
  position: fixed;
  padding: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.7);
  z-index: 100;
}

.banaa {
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 30%;
  top: 250px;
  width: 30%; /* Full width */
  height: 30%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: #F7EDDB;;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-content: space-around;
  box-shadow: 10px 10px 8px #888888;
  border: 2px solid #4E944F ;
  border-radius: 25px;
  opacity: 1;
}

.popup-icons {
  width: 10%;
}

// TIPS & TRICKS

.tips-container {
  display: flex;
  flex-wrap: wrap;
  align-content: space-around;
  justify-content: space-around
}

.tips-msg-container {
  margin-top: 50px;
  margin-left: 20px;
  margin-bottom: 20px;
  text-align: center;
  font-weight: bold;
}

// WELCOME-PAGE

.animated-title {
  font-family: "Montserrat";
  max-width: 40ch;
  text-align: center;
  transform: scale(0.94);
  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
  font-size: 6em;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  img {
    width: 80%;
    animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
    display: inline-block;
    opacity: 0;
    filter: blur(4px);
  }

  .one {
    display: flex;
  }

  .three {
    display: flex;
  }

  .get-started {
    margin-top: 20px;
    animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
    display: inline-block;
    opacity: 0;
    filter: blur(4px);
  }
}

.animated-content {
  font-family: "Montserrat";
  max-width: 40ch;
  text-align: center;
  transform: scale(0.94);
  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
  font-size: 0.5em;
}

@keyframes scale {
  100% {
    transform: scale(1);
  }
}

span {
  display: inline-block;
  opacity: 0;
  filter: blur(4px);
  margin-left: 10px;
}

span:nth-child(1) {
  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(2) {
  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(3) {
  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(4) {
  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(5) {
  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(6) {
  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(7) {
  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(8) {
  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(9) {
  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(10) {
  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(11) {
  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(12) {
  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(13) {
  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

span:nth-child(14) {
  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
}

@keyframes fade-in {
  100% {
    opacity: 1;
    filter: blur(0);
  }
}

#bwelc{
  margin-top: 20px;
  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
  display: inline-block;
  opacity: 0;
  filter: blur(4px);
  padding: 15px 25px;
  font-size: 24px;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #fff;
  background-color: #4E944F;
  border: none;
  border-radius: 15px;
  box-shadow: 0 9px #999;
}

#bwelc:hover {background-color: #3e8e41}

#bwelc:active {
  background-color: #4E944F;
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

